[package]
name = "ffgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
ffmpeg-next = { version = "8.0" }
thiserror = "2.0"
wgpu = "28.0"
winit = "0.29"
pollster = "0.4"
env_logger = "0.11"
log = "0.4"
crossbeam-channel = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_Graphics_Direct3D11", "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common", "Win32_Security", "Win32_Graphics_Direct3D12"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-core-video = "0.3"
objc2-metal = "0.3"
metal = "0.33"

[target.'cfg(target_os = "linux")'.dependencies]
ash = "0.38"
libc = "0.2"

[dev-dependencies]
glyphon = "0.10"
